# OpenGLTestCrossCompile

./: .gitignore  CMakeLists.txt  README.md  main.cpp
res/shaders/: basic.glsl  mandelbrot.glsl
shader/: Shader.cpp  Shader.h
